--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 	<div id="app">
 	</div>
+	<!-- Below is FireBase JS -->
+	<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
+	<!-- Below is Custom JS -->
 	<script src="/public/scripts/app.js"></script>
 </body>
 </html>
