Setup up basic styling and scss files. Added in Food component.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<div id="app">
-	</div>
+	<!-- <div class="wrapper"> -->
+		<div id="app">
+			<!-- THIS IS WHERE MY REACT APP LOADS IN! -->
+		</div>
+	<!-- </div> -->
 	<!-- Below is FireBase JS -->
 	<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 	<!-- Below is Custom JS -->
