Started and Completed initial styling of entire app. Reedy to add final functional piece of userLoadout.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 	<meta charset="UTF-8">
 	<title>BOTW Loadouts</title>
 	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Medula+One" rel="stylesheet">
+	 <!-- 
+		font-family: 'Medula One', cursive; 
+		font-family: 'Libre Baskerville', serif; 
+	-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
