Fixed scripts/styles path for hosting.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BOTW Loadouts</title>
-	<link rel="stylesheet" type="text/css" href="/public/styles/style.css">
+	<link rel="stylesheet" type="text/css" href="./public/styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Medula+One" rel="stylesheet">
 	 <!-- 
 		font-family: 'Medula One', cursive; 
@@ -20,6 +20,6 @@
 	<!-- Below is FireBase JS -->
 	<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 	<!-- Below is Custom JS -->
-	<script src="/public/scripts/app.js"></script>
+	<script src="./public/scripts/app.js"></script>
 </body>
 </html>
