Refactored Code, Added Favicon, and updated database. Also made header and footer more responsive for larger screens.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>BOTW Loadouts</title>
+	<link rel="icon" type="image/png" href="./public/assets/BOTW-Favicon.png">
 	<link rel="stylesheet" type="text/css" href="./public/styles/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Medula+One" rel="stylesheet">
 	 <!-- 
